# mnist-wgan-gp-explorer

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: pages.yml
browser/: README.md  package-lock.json  package.json  playwright.config.js  vite.config.js
browser/public/models/: generator-uint8.onnx  generator.onnx  manifest.json  quality-scorer-uint8.onnx
browser/scripts/: prepare-index.mjs
browser/src/: engine.js  main.js  quality.js  random.js  render.js  serial.js
browser/tests/: quality.test.js  random.test.js  serial.test.js
browser/tests/e2e/: explorer.spec.js  firefox.spec.js  mobile.spec.js  tab-selection.spec.js
scripts/: export_browser_models.py  package_inference_checkpoint.py
src/mnist_wgan/: __init__.py  app.py  callbacks.py  classifier.py  cli.py  data.py  losses.py  metrics.py  models.py  module.py  paths.py  sampling.py  visualize.py
src/mnist_wgan/static/: index.html
tests/: test_app.py  test_metrics.py  test_models.py  test_paths.py  test_visualize.py
