[project]
name = "mnist-wgan-gp-explorer"
version = "0.1.0"
description = "Conditional MNIST generation, calibrated evaluation, and latent-space exploration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "lightning>=2.6.5",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "tensorboard>=2.21.0",
    "torch>=2.13.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.28.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
mnist-wgan-train = "mnist_wgan.cli:train"
mnist-wgan-evaluate = "mnist_wgan.cli:evaluate"
mnist-wgan-ui = "mnist_wgan.cli:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnist_wgan"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
